{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 149,
  "lineage": "418b48b4-c842-6fae-3762-e21298790f33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "orca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:022786159174:loadbalancer/app/orca-alb/b026d73988a98ea7",
            "arn_suffix": "app/orca-alb/b026d73988a98ea7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "orca-alb-2087693167.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:022786159174:loadbalancer/app/orca-alb/b026d73988a98ea7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "orca-alb",
            "security_groups": [
              "sg-0ffc6ad71df4d3b90"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c09dcdf85cac231"
              },
              {
                "subnet_id": "subnet-0e34c3c1cbd94d2e0"
              }
            ],
            "subnets": [
              "subnet-05c09dcdf85cac231",
              "subnet-0e34c3c1cbd94d2e0"
            ],
            "vpc_id": "vpc-0e5238127a62a04f0",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.orca_alb",
            "aws_subnet.orca_public",
            "aws_vpc.orca",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "orca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:022786159174:listener/app/orca-alb/b026d73988a98ea7/2713ca7de9367832",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:022786159174:targetgroup/orca-alb/90b33018b7586ecd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:022786159174:listener/app/orca-alb/b026d73988a98ea7/2713ca7de9367832",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:022786159174:loadbalancer/app/orca-alb/b026d73988a98ea7",
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.orca",
            "aws_alb_target_group.orca",
            "aws_security_group.orca_alb",
            "aws_subnet.orca_public",
            "aws_vpc.orca",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "orca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:022786159174:targetgroup/orca-alb/90b33018b7586ecd",
            "arn_suffix": "targetgroup/orca-alb/90b33018b7586ecd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/_healthz",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:022786159174:targetgroup/orca-alb/90b33018b7586ecd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "orca-alb",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "dependencies": [
            "aws_vpc.orca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "orca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:internet-gateway/igw-0e9d152a449fdebf5",
            "id": "igw-0e9d152a449fdebf5",
            "owner_id": "022786159174",
            "tags": {
              "Name": "orca"
            },
            "tags_all": {
              "Name": "orca"
            },
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "dependencies": [
            "aws_vpc.orca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9d152a449fdebf5",
            "id": "r-rtb-0ad31acc893107ff01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad31acc893107ff0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.orca",
            "aws_vpc.orca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "orca_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:security-group/sg-0ffc6ad71df4d3b90",
            "description": "Allow access on port 5000 only to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffc6ad71df4d3b90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "orca-alb",
            "name_prefix": "",
            "owner_id": "022786159174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.orca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "orca_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:security-group/sg-0e6fadd49f0a09b0a",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6fadd49f0a09b0a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffc6ad71df4d3b90"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "orca-tasks",
            "name_prefix": "",
            "owner_id": "022786159174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.orca_alb",
            "aws_vpc.orca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "orca_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:security-group/sg-01f0bfe92fa5033ae",
            "description": "allow inbound access from the orca tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f0bfe92fa5033ae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6fadd49f0a09b0a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "orca-rds",
            "name_prefix": "",
            "owner_id": "022786159174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.orca_alb",
            "aws_security_group.orca_ecs",
            "aws_vpc.orca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "orca_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:subnet/subnet-02fb0d8ea8203c33b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fb0d8ea8203c33b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022786159174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orca #0 (private)"
            },
            "tags_all": {
              "Name": "orca #0 (private)"
            },
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "dependencies": [
            "aws_vpc.orca",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:subnet/subnet-0f170d8fdbd1b4a48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f170d8fdbd1b4a48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022786159174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orca #1 (private)"
            },
            "tags_all": {
              "Name": "orca #1 (private)"
            },
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "dependencies": [
            "aws_vpc.orca",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "orca_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:subnet/subnet-05c09dcdf85cac231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c09dcdf85cac231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022786159174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orca #2 (public)"
            },
            "tags_all": {
              "Name": "orca #2 (public)"
            },
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "dependencies": [
            "aws_vpc.orca",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:subnet/subnet-0e34c3c1cbd94d2e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e34c3c1cbd94d2e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022786159174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orca #3 (public)"
            },
            "tags_all": {
              "Name": "orca #3 (public)"
            },
            "vpc_id": "vpc-0e5238127a62a04f0"
          },
          "dependencies": [
            "aws_vpc.orca",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "orca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022786159174:vpc/vpc-0e5238127a62a04f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-02adb45310c88e91a",
            "default_route_table_id": "rtb-0ad31acc893107ff0",
            "default_security_group_id": "sg-0db120f82c9556f65",
            "dhcp_options_id": "dopt-03bd65f578b013add",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e5238127a62a04f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ad31acc893107ff0",
            "owner_id": "022786159174",
            "tags": {
              "Name": "orca"
            },
            "tags_all": {
              "Name": "orca"
            }
          }
        }
      ]
    }
  ]
}